# pydev1

./: .gitignore  Makefile  README.md  dev.ipynb  pyproject.toml  specification.txt
app/: api.py  config.py  database.py  main.py  models.py  repo.py
test/: task_test.py
